--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+  <% if current_user %>
+    Logged in as <%= current_user.email %>. <%= link_to "Log Out", logout_path %> <br/><br/>
+    <ul id="menu">
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Load JSON File", new_json_path %></li>
+      <li><%= link_to "Generate Report", report_path %></li>
+    </ul>
+  <% else %>
+    <ul id="menu">
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Sign Up", signup_path %></li>
+      <li><%= link_to "Log In", login_path %></li>
+    </ul>
+    <div class="clearfix"></div>
+  <% end %>
     <%= yield %>
   </body>
 </html>
